test/syc/good/typequal.c
/*
 * Const, restrict, volatile type qualifiers.
 */

const int ci;
volatile int vj;

int *const icp;
int *restrict irp;
int *volatile ivp;
