test/syc/bad/conflqualrestrict.c
/*
 * Conflicting type 'restrict ^int' for 'i', previously declared as '^int'.
 */

int *i;
int *restrict i;
